# a_gpt_robot

./: CMakeLists.txt  README.md  package.xml
backups/: simple_office.world
prompts/: p1_role.txt  p2_function.txt  p3_environment  p4_example.txt  p4_output_format.txt  p5_examples.txt  tiago_detail_steps.txt  tiago_pick_and_place.txt  tiago_prompt_all.txt
scripts/: 01_add_object.py  02_set_pose_plan.py  03_set_joint_plan.py  06_set_Scene.py  07_car_service.py  08_car_service_client.py  10_move_arm.py  block_gpt.py  block_gpt_vis.py  block_p01_system.txt  block_p02_role.txt  block_p03_env.txt  block_p04_function.txt  block_p05_output.txt  block_p06_example.txt  block_p07_query.txt  block_pmt_02_role.txt  block_pmt_06_example.txt  block_pmt_07_query.txt  block_restful.py  code.txt  commands.txt  problems  tiago_clients.py  tiago_frame_publishers.py  tiago_frame_test.py  tiago_gpt.py  tiago_pickplace_services.py  tiago_prompt.py  tiago_prompt.txt  tiago_prompt_pickplace.txt  tiago_prompt_sit_copy.txt  tiago_prompt_sit_system.txt  tiago_prompt_sit_user.txt  tiago_services.py  utils.py
src/: cv_aruco_gen.cpp  make_marker.cpp
