<?xml version="1.0"?>
<package format="2">
  <name>a_gpt_robot</name>
  <version>0.0.1</version>
  <description>a gpt-powered robot control package</description>

  <maintainer email="lqiangecnu@gmail.com">Qiang Liu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>aruco</depend>

</package>
